k8s.yaml
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 3000
    targetPort: 3000

---
#########################################################
# Ingress for Moleculer API Gateway
#########################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  #annotations:
  #  kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: tydids-ssi-consent-router.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000

---
#########################################################
# API Gateway service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: tydids-ssi-consent-router
        imagePullPolicy: IfNotPresent
---
#########################################################
# Consent service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consent
spec:
  selector:
    matchLabels:
      app: consent
  replicas: 2
  template:
    metadata:
      labels:
        app: consent
    spec:
      containers:
      - name: consent
        image: tydids-ssi-consent-router
        imagePullPolicy: IfNotPresent
